Fixed font size for about section and z-index for navbar

--- a/alpha-corsi-website/components/layout.module.css
+++ b/alpha-corsi-website/components/layout.module.css
@@ -1,5 +1,5 @@
 .container {
-
+  z-index: 1100;
 }
 
 .navbar {
